Метод ProductController.add() переделал на 201
