# sevfruit-supplier-service/api/api-spec.yaml
@@ -85,7 +85,7 @@ paths:
       tags:
       - Supplier
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -100,7 +100,7 @@ paths:
                 name: S2
               - id: 3
                 name: S3
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -112,7 +112,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /supplier
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -131,7 +131,7 @@ paths:
       tags:
       - Supplier
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -140,7 +140,7 @@ paths:
               example:
                 id: 4
                 name: S4
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -152,7 +152,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /supplier
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -180,7 +180,7 @@ paths:
           schema:
             type: integer
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -189,7 +189,7 @@ paths:
               example:
                 id: 1
                 name: "S1"
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -201,7 +201,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /supplier/1
-        404:
+        "404":
           description: Поставщик не найден
           content:
             application/json:
@@ -213,7 +213,7 @@ paths:
                 error: Not Found
                 message: Поставщик 11 не найден
                 path: /supplier/11
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -234,7 +234,7 @@ paths:
       tags:
       - Product
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -249,7 +249,7 @@ paths:
                 name: Яблоки жёлтые
               - id: 3
                 name: Яблоки зелёные
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -261,7 +261,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /product
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -279,17 +279,24 @@ paths:
       description: Добавляет новый вид продукции
       tags:
       - Product
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Product"
+            example:
+              name: Яблоки белые
       responses:
-        200:
+        "201":
           description: OK
-          content: 
-            application/json:
+          headers:
+            Location:
+              description: URL добавленного вида продукции
               schema:
-                $ref: "#/components/schemas/Product"
-              example:
-                id: 4
-                name: Яблоки белые
-        401:
+                type: string
+                format: uri
+              example: http://localhost:8080/product/10
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -301,7 +308,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /product
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -329,7 +336,7 @@ paths:
           schema:
             type: integer
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -338,7 +345,7 @@ paths:
               example:
                 id: 1
                 name: "Яблоки красные"
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -350,7 +357,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /product/1
-        404:
+        "404":
           description: Вид продукции не найден
           content:
             application/json:
@@ -362,7 +369,7 @@ paths:
                 error: Not Found
                 message: Вид продукции 11 не найден
                 path: /product/11
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -383,7 +390,7 @@ paths:
       tags:
       - Period
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -398,7 +405,7 @@ paths:
                 name: "2021"
               - id: 3
                 name: "2022"
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -410,7 +417,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /period
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -429,7 +436,7 @@ paths:
       tags:
       - Period
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -438,7 +445,7 @@ paths:
               example:
                 id: 4
                 name: "2023"
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -450,7 +457,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /period
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -478,7 +485,7 @@ paths:
           schema:
             type: integer
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -487,7 +494,7 @@ paths:
               example:
                 id: 3
                 name: "2022"
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -499,7 +506,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /period/3
-        404:
+        "404":
           description: Период не найден
           content:
             application/json:
@@ -511,7 +518,7 @@ paths:
                 error: Not Found
                 message: Период 33 не найден
                 path: /period/33
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -539,7 +546,7 @@ paths:
       tags:
       - Period
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -562,7 +569,7 @@ paths:
                     name: Груши жёлтые
                   totalQuantity: 3.0
                   totalValue: 450000.0
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -574,7 +581,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /period/3/report
-        404:
+        "404":
           description: Период не найден
           content:
             application/json:
@@ -586,7 +593,7 @@ paths:
                 error: Not Found
                 message: Период 33 не найден
                 path: /period/33/report
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -607,7 +614,7 @@ paths:
       summary: Список всех прайс листов
       description: Возвращает список всех прайс листов
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -631,7 +638,7 @@ paths:
                     id: 1
                     name: Яблоки красные
                   value: 110000.0
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -643,7 +650,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /price
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -662,7 +669,7 @@ paths:
       tags:
       - Price
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -670,7 +677,7 @@ paths:
                 $ref: "#/components/schemas/Price"
 #              example: #TODO
 
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -682,7 +689,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /price
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -710,7 +717,7 @@ paths:
           schema:
             type: integer
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -753,7 +760,7 @@ paths:
                     id: 5
                     name: Груши зелёные
                   value: 175000.0
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -765,7 +772,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /price/1
-        404:
+        "404":
           description: Прайс лист не найден
           content:
             application/json:
@@ -777,7 +784,7 @@ paths:
                 error: Not Found
                 message: Прайс лист 11 не найден
                 path: /price/11
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -798,7 +805,7 @@ paths:
       tags:
       - Shipment
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -807,7 +814,7 @@ paths:
                 items:
                   $ref: "#/components/schemas/Shipment"
 #              example: #TODO
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -819,7 +826,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /shipment
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -838,14 +845,14 @@ paths:
       tags:
       - Shipment
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
               schema:
                 $ref: "#/components/schemas/Shipment"
 #              example: #TODO
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -857,7 +864,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /shipment
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
@@ -885,7 +892,7 @@ paths:
           schema:
             type: integer
       responses:
-        200:
+        "200":
           description: OK
           content: 
             application/json:
@@ -934,7 +941,7 @@ paths:
                       name: Груши зелёные
                     value: 175000.0
                   quantity: 1.3
-        401:
+        "401":
           description: Запрос не авторизован
           content:
             application/json:
@@ -946,7 +953,7 @@ paths:
                 error: Unauthorized
                 message: Full authentication is required to access this resource
                 path: /shipment/1
-        404:
+        "404":
           description: Поставка не найдена
           content:
             application/json:
@@ -958,7 +965,7 @@ paths:
                 error: Not Found
                 message: Поставка 11 не найдена
                 path: /shipment/11
-        500:
+        "500":
           description: Ошибка сервера
           content:
             application/json:
