# sevfruit-supplier-service/src/main/java/com/sevfruit/service/ProductController.java
@@ -1,5 +1,6 @@
 package com.sevfruit.service;
 
+import java.net.URI;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -9,6 +10,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -16,6 +18,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import com.sevfruit.model.Product;
 import com.sevfruit.repo.ProductRepository;
@@ -75,11 +78,16 @@ public class ProductController {
 	 * @return
 	 */
 	@PostMapping("")
-	public Product add(@RequestBody Product product)
+	public ResponseEntity<Void> add(@RequestBody Product product)
 	{
 		try
 		{
-			return productRepository.save(product);
+			final Product newProduct = productRepository.save(product);
+			
+			final URI location = ServletUriComponentsBuilder.fromCurrentRequestUri()
+					.pathSegment("{product_id}").buildAndExpand(newProduct.getId()).toUri();
+			
+			return ResponseEntity.created(location).build();
 		} catch (Exception e)
 		{
 			throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
